Feature(#40):Added swagger schema description
