# docs/swagger.json
@@ -47,6 +47,23 @@
                     }
                 }
             }
+        },
+        "/tweets/{id}": {
+            "delete": {
+                "description": "delete new tweet.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "operationId": "delete-tweets-id",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
         }
     },
     "definitions": {
